assign1/tests/type-checking/bad/func-wrong-arg-type.c
#include "FenneC.h"

void foo(int a) {
}
int main() {
    foo(1U);
    return 0;
}